# NYSolarCast_delivery

./: README.md
DOCS/: EPRI Documentation.docx
apps/ghi_fcst/: Arguments.cc  Arguments.hh  FcstProcessor.cc  FcstProcessor.hh  MainGHIFcst.cc  NwpMgr.cc  NwpMgr.hh  NwpReader.cc  NwpReader.hh  ObsMgr.cc  ObsMgr.hh  ObsReader.cc  ObsReader.hh  SConstruct  SiteMgr.cc  SiteMgr.hh
apps/grib2site/: CMakeLists.txt  Makefile  centers.cc  centers.h  dump.cc  emalloc.cc  emalloc.h  ens.cc  ens.h  g21params.h  gbds.cc  gbds.h  gbytem.cc  gbytem.h  gdes.cc  gdes.h  gds.h  get_prod.cc  get_prod.h  grib1.cc  grib1.h  grib2site.cc  gribtypes.cc  gribtypes.h  levels.cc  levels.h  mkdirs_open.cc  mkdirs_open.h  models.cc  models.h  nc.cc  nc.h  ncfloat.cc  ncfloat.h  nuwg.cc  nuwg.h  params.cc  params.h  product_data.cc  product_data.h  (+10 more)
apps/pct_power_fcst/: Arguments.cc  Arguments.hh  BlendedModelMgr.cc  (+11 more)
cron/: crontab.NYSC
libs/dmapf/: CMakeLists.txt  README
libs/dmapf/doc/: DmapfCUse.html  dmapf_functions  fw_menu.js  nav.css
libs/dmapf/src/: Makefile  Makefile.gtg  SConstruct  dmapf.make  premake4.lua
libs/dmapf/src/dmapf/: Makefile  SConstruct  basegm.c  cmapf.c  cmapf_model.cc  cmll2xy.c  eqvlat.c  geog_ll.c  kcllxy.c  limmath.c  ll_geog.c  lmbrt.c  map_xy.c  mapstart.c  nearest.cc  obmrc.c  obqlmbrt.c  obstr.c  proj_3d.c  ruc13ll2xy.cc  ruc40.cc  ruc40.txt  ruclatlon.asc  stcm1p.c  stcm2p.c  test_alaska6.cc  test_awips217.cc  test_conus5.cc  test_oblique.c  test_ruc20.cc  test_ruc40.cc  test_ruc5.cc  teststr.c  trnsmrc.c  tsteqvlt.c  vector_3.c  xy_map.c
libs/dmapf/src/include/dmapf/: cmapf.h  cmapf_model.hh  limmath.h  vector_3.h
shading/: Srad.Flag.mins.sunrise.a10m.20200804-17sites.csv  Srad.Flag.mins.sunset.a10m.20200804-17sites.csv  Sunrise.UTCs.17sites.csv  Sunset.UTCs.17sites.csv
(+150 files in other folders)
